# acs-voice-test

./: .dockerignore  .gitignore  AI_VoiceBot_TaskTracker.xlsx  CLAUDE.md  Dockerfile  PROJECT_ARCHITECTURE.md  QuestionList - Copy.json  QuestionList.json  README.md  pyproject.toml  requirements.txt  server.py  user_functions.py
.agent-os/context/: Agent_Instructions_Review_and_Improvements.md  Persona.docx  Persona.md  Project_Context_and_Progress.md  Session_Summary_Jan8_2026.md  Session_Summary_Jan8_2026_Phase1.md  current-session.md  project-context.md  project-overview.md  questions.md  sync-log.md
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/tasks/: active-sprint.md  backlog.md  phase-1-questionnaire-engine.md  phase-2-intelligence-layer.md  phase-3-testing-refinement.md  phase-4-demo-documentation.md
.claude/commands/: add-decision.md  project-status.md  sync-from-file.md  update-from-meeting.md  update-project.md  update-task-status.md
.github/workflows/: main_voice-bot-web.yml
app/handler/: acs_media_handler.py  chat_handler.py
docs/original/: Protective_Capgemini_SOW_POC_Conversational_Agent 3.docx  Tele Life Executive Interview.docx  TeleLife_Underwriting_PDD_v1.1_Improved.docx  Telelife Guide_Example (2).docx
docs/processed/: Executive_Interview.md  (+5 more)
react-ui/: .env.example  .env.production  .gitignore  DEVELOPER_GUIDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
static/: index.html  index.original.html  index.vanilla-backup.html  rollback.sh
(+46 files in other folders)
